--- a/sample.html
+++ b/sample.html
@@ -4,16 +4,23 @@
 <title>Sample</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="css/cabinet-grotesk.css">
-<style>
-    h1{
-        font-family: 'CabinetGrotesk-Thin';
-        padding-top: 10%;
-        font-size: 100px;
-        text-align: center;
-    }
-</style>
 </head>
 <body>
+<div class="tab">
+    <ul>
+        <li>
+            <img src="about-removebg-preview.png" alt="about us" >
+            <span><a href="index.html">About Us</a></span>
+        </li>
+        <li>
+            <img src="home1-removebg-preview.png" alt="home">
+            <span><a href="sample.html">Home</a></span>
+        </li>
+    </ul>
+    <div>
+        
+    </div>
+</div>
 <h1>INTERIOR<br>DESIGNS</h1>
 </body>
 </html>
