--- a/sample.html
+++ b/sample.html
@@ -3,24 +3,26 @@
 <head>
 <title>Sample</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="css/cabinet-grotesk.css">
 </head>
 <body>
+    <div class="main">
 <div class="tab">
+    
     <ul>
-        <li>
-            <img src="about-removebg-preview.png" alt="about us" >
-            <span><a href="index.html">About Us</a></span>
-        </li>
         <li>
             <img src="home1-removebg-preview.png" alt="home">
             <span><a href="sample.html">Home</a></span>
+        </li>
+        <li>
+            <img src="about-removebg-preview.png" alt="about us" >
+            <span><a href="index.html">About Us</a></span>
         </li>
     </ul>
     <div>
         
     </div>
 </div>
-<h1>INTERIOR<br>DESIGNS</h1>
+<h1 class="slide-fade-in">EXQUISITE</h1>
+</div>
 </body>
 </html>
