--- a/Interior design/aboutus.html
+++ b/Interior design/aboutus.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
 
     <title>Document</title>
     <style>
@@ -97,13 +100,18 @@
         }
         .text-container {
   text-align: left;
-  margin-top: 400px;
-  font-family: 'Tangerine',sans-serif;
+  margin-left: 100px;
+  margin-top: 450px;
+ 
 }
 
 .animated-text {
-    font-size: 60px;
-  color: black;
+    
+            font-size: 100px;
+            font-family: "Poiret One", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            color: black;
   opacity: 0; 
   transform: scale(0.8); /* Start slightly smaller */
   animation: appear 2s ease forwards; 
@@ -121,11 +129,136 @@
     transform: scale(1);
   }
 }
+    .loc2{
+            position: absolute;
+            top: 985px;
+            left: 55%;
+            width: 40%;
+        }
+        .text1{
+            color: black;
+            font-size: 20px;
+            font-family: 'Times New Roman', Times, serif;
+            opacity: 0; 
+  transform: scale(0.8); /* Start slightly smaller */
+  animation: appear 2s ease forwards; 
+  animation-delay: 4s;
+ 
+        }
+        #size1 {
+                width: 400px;
+        }
+        .section1 {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 500%;
+            width: 100%;
+            border: 10px;
+            z-index: 10;
+        }
+        .light-bg {
+            background-color: #d2c9bc;
+        }
+        footer {
+            height: 200px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #f6f4f1;
+            color: white;
+            padding: 0 20px; 
+            position: absolute;
+            top: 600%;
+            width: 100%;
+            border-top: 3px ;
+            border-color: #1b1919;
+        }
+
+        .decor {
+            font-size: 50px; 
+            font-family: "Cinzel Decorative", serif;
+            font-weight: 400;
+            font-style: normal;
+            color: black;
+            margin-left: 45%;
+            margin-top: 10px;
+        }
+
+        .social {
+            margin-left: auto; 
+            margin-right: 50px;
+            font-size: 20px; 
+            color: black;
+        }
+        .loc3{
+            position: absolute;
+            top: 590%;
+            left: 30%;
+            width: 70%;
+            z-index: 100;
+            color: #555;
+        }
+        .heading1_2{
+            font-size: 250px;
+            font-family: "Poiret One", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            padding: 0px 0px;
+            margin: 0px 0px;
+            color: rgb(0, 0, 0);
+            text-align: center;
+        }
+        .loc5{
+            position: absolute;
+            margin-left: 15%;
+            margin-top: 1500px;
+           
+        }
+        .loc6{
+            position: absolute;
+            margin-top: 1500px;
+            margin-left: 800px;
+        }
+        .text5{
+            font-size: 50px;
+            font-family: "Poiret One", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            color: black;
+            opacity: 0; 
+            transform: scale(0.8); /* Start slightly smaller */
+            animation: appear 2s ease forwards; 
+            animation-delay: 4s;
+            margin-left: 40px;
+        }
+        .loc7{
+            position: absolute;
+            margin-left: 100px;
+            margin-top: 880px;
+        }
+        .loc8{
+            position: absolute;
+            margin-top: 800px;
+            margin-left: 55%;
+        }
+        .loc9{
+            position: absolute;
+            margin-top: 80px;
+            margin-left: 15%;
+        }
+        .loc10{
+            position: absolute;
+            margin-top: 100px;
+            margin-left: 800px;
+        }
     </style>
 </head>
 <body>
     <div class="page-content-wrapper" id="pageContentWrapper"></div>
-    <div class="sliding-div" style="background-image: url(interior_designers_aesthetic_scene.png); background-size: cover;background-position:center; background-repeat: no-repeat;">
+    <div class="sliding-div" style="background-image: url(room\ ka\ photu.jpg); background-size: cover;background-position:center; background-repeat: no-repeat;">
     </div>
     <div class="h5" id="animate">
         <h5>INTERIOR DESIGN &<br> DECORATION</h5>
@@ -142,9 +275,71 @@
         </ul>
     </nav>
     <h1 class="heading1" id="animate1">ABOUT US</h1>
-    <section><div class="text-container">
-        <p class="animated-text">This mini project showcases <br>an industry-level approach <br>to interior design.</p>
-    </div></section>
+    <div class="text-container">
+        <p class="animated-text">SETTINGS <br>STANDARDS<br>IN LUXURY <br>DESIGN</p>
+    </div>
+   <div class="loc2" id="size1">
+    <pre class="text1 animated-text">
+    Think exclusive. Think elegant. Tasteful. Timeless. Or colourful, 
+    characterful and contemporary. We create exquisite interiors as unique 
+    and individual as our clients. From bold, exciting concept to precise,
+    pristine finish. With care, craft and a reassuring calm.
+
+    We are for the select few.</pre>
+   </div>
+   <div class="loc9">
+    <img src="https://via.placeholder.com/550" alt="Image 1">
+   </div>
+   <div class="loc7">
+    <pre>
+        <p class="text5">THE CONCEPT</p>
+        <p class="text1">
+        After taking the detailed brief we will present the concept designs, 
+        consisting of floor plans and elevations illustrating the proposed furniture 
+        layouts and any structural changes that may be required. We also present 
+        mood board presentations containing samples of all the proposed fabrics 
+        and finishes as well as imagery of suggested furniture and joinery concepts.
+        </p>
+    </pre>
+   </div>
+   <div class="loc8">
+    <img src="color_pallette.jpg" alt="" height="550px" width="600px">
+   </div>
+   <div class="loc6">
+   <pre>
+    <p class="text5">THE FINAL</p>
+    <p class="text1">
+        Having approved all of the concept designs we progress to the design 
+        development and detail design stage. All final bespoke furniture, joinery 
+        and interior architecture drawings will be presented, along with all final 
+        finishes artwork and accessories for clients to approve. At this stage we will 
+        also present a fully itemised breakdown of costs.
+    </p>
+   </pre>
+    </div>
+    <div class="loc10">
+        <pre>
+         <p class="text5">THE BRIEF</p>
+         <p class="text1">
+            We build a picture of the project through a site visit or floor plans and 
+            photographs as well as ensuring that we understand all factors such as time 
+            scale, budget, and any structural requirements.
+         </p>
+        </pre>
+         </div>
+   <div class="loc5">
+    <img src="final details.jpg" alt="#"  height="550px" width="500px">
+   </div>
+   <section class="section1 light-bg">
+    <h1 class="heading1_2">WORK <br>WITH US</h1>
+</section>
+<div>
+<p class="loc3" >Send us a message to discuss your project in further detail, or for information about our services.</p>
+</div>
+<footer>
+    <div class="decor">Decor</div>
+    <div class="social">Follow us on Instagram</div>
+</footer>
     <div class="transition-overlay" id="transitionOverlay"></div>
     <script>
         window.addEventListener('load', function() {
